@@ -1,5 +1,16 @@
 2009-10-29  Pavel Feldman  <pfeldman@chromium.org>
 
+        Reviewed by Timothy Hatcher.
+
+        Web Inspector: hide timeline for now - not yet ready.
+
+        https://bugs.webkit.org/show_bug.cgi?id=30912
+
+        * inspector/front-end/inspector.js:
+        (WebInspector._createPanels):
+
+2009-10-29  Pavel Feldman  <pfeldman@chromium.org>
+
         Not reviewed: deploy Web Inspector's images in WebCore.gypi.
 
         * WebCore.gypi:
